# platform.core.system.argos_watchdog

./: CMakeLists.txt  LICENSE  argos_watchdog.pc.in
include/: argos.h  common.h
packaging/: argos_watchdog.spec
src/: argos-common.c  argos-systemd.c  argos.c
test/: CMakeLists.txt  argos-test.c  argos-test.service
