CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(LIB_NAME "argos_watchdog")
PROJECT(${LIB_NAME} C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "${PREFIX}/bin")
SET(LIBDIR "${PREFIX}/lib")
SET(INCLUDEDIR "${PREFIX}/include/${PROJECT_NAME}")
SET(SRCS
	src/argos.c)

SET(HEADERS
	include/argos.h)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

SET(PKG_MODULES )

IF(LIBSYSTEMD STREQUAL on)
	SET(PKG_MODULES ${PKG_MODULES} libsystemd)
	SET(SRCS ${SRCS} src/argos-systemd.c)
ELSE()
	SET(SRCS ${SRCS} src/argos-common.c)
ENDIF()

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED ${PKG_MODULES})

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fPIC -Wall -Werror -fvisibility=hidden")
SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -g")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES SOVERSION ${MAJORVER})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${FULLVER})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)

CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION lib/pkgconfig)

INSTALL(FILES ${HEADERS} DESTINATION include/${PROJECT_NAME})

IF(TEST STREQUAL on)
ADD_SUBDIRECTORY(test)
ENDIF()
